# rainflow

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.MD  README.md  README.rst  README.rst.in  RainflowMatrix.hpp  coan-args-extern.in  coan-args-minimal.in  coan-args.in  coan_invoke-extern.bat  coan_invoke-minimal.bat  coan_invoke-minimal.sh  coan_invoke.bat  config.h  config.h.in  content.txt  export_series.m  long_series.csv  make.m  rainflow.7z  rainflow.c  rainflow.h  rainflow.hpp  rainflow.sublime-project  rainflow.sublime-workspace  rainflow_external_tp.hpp  rfc.mexw64  rfc_test.c  rfc_wrapper_test.cpp  test.m  validate.m
.github/workflows/: build-wheels.yml  run_test.yml  tests.yml
docs/: algorithm.rst  astm_method.rst  conf.py  cpp_wrapper.rst  damage_history.rst  delegates.rst  examples.rst  features.rst  index.rst  index.rst.in  installation.rst  installation.rst.in  minimal_build.rst  references.rst  references.rst.in  residue_methods.rst  spread_damage.rst  tp_prune.rst  turning_points.rst
matlab/: at.m  bitconf.m  long_series_csv.mat  make.m  make_permute.m  rfc_vs_ftc.m  series_to_excel.m  valid_series_generator.m  validate.m
python/: CMakeLists.txt  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt  rfcnt.pyi  run_examples.py  run_tests.py  setup.py  utils.py
python/ipynb/: example_damage_history.ipynb
python/src/: pyrfc.cpp  rainflow.c  rainflow.h  rainflow.hpp  rfcnt.cpp
python/test/: examples.py  test.py
python/tests/: __init__.py  examples.py  test_rfcnt.py
src/: CMakeLists.txt  config.h.in  rainflow.c  rainflow.h  rainflow.hpp
src/lib/: CMakeLists.txt  config.h  config.h.in  rainflow.c  rainflow.hpp
src/lib/minimal/: create_minimal_sources.bat  rainflow.c  rainflow.h  readme.md
src/lib/minimal/cfg/: unifdef_defile.h
src/matlab/: CMakeLists.txt  make.m  rfc.c  validate.m
src/python/: CMakeLists.txt  LICENSE  MANIFEST.in  README.rst  __init__.py  make_prebuilds.bat  prebuilds.json  pyproject.toml  requirements.txt  rfcnt.pyi  run_examples.py  run_tests.py  setup.py  utils.py  version.py  version.py.in
src/python/cmake/: generate_version.cmake  numpy_get_include.py  rfcnt_target_functions.cmake
src/python/docstrings/: damage_from_rp.txt  rfc.txt
src/python/ipynb/: example_damage_history.ipynb
src/python/lib/: config.h  rainflow.c  rainflow.h  rainflow.hpp
src/python/notebooks/: example.xcf  example_damage_history.ipynb  example_miner_verifications.ipynb
src/python/src/: docstrings_generated.hpp  numpy_arrayobject.h  rainflow.c  rainflow.h  rfcnt.cpp
src/python/tests/: examples.py  long_series.csv  rfcnt_example.npz  test_rfcnt.py  test_rfcnt_npz.py
test/: CMakeLists.txt  long_series.c  long_series.csv  long_series.h  rfc_test.c  rfc_wrapper_advanced.cpp  rfc_wrapper_simple.cpp  rfc_wrapper_test.cpp  rfc_wrapper_test2.cpp
tools/: check_static_crt.py  check_version_sync.py  where_to_get_coan.txt
